fix wrapping problem

--- a/src/styles/page1.css
+++ b/src/styles/page1.css
@@ -54,6 +54,10 @@ body {
 
 }
 
+.options-container {
+    white-space: nowrap;
+}
+
 .options-background {
     display: inline-block;
     background-color: var(--Span-Bg);
